tests/ui/query-system/query-cycle-printing-issue-151226.rs
struct A<T>(std::sync::OnceLock<Self>);
//~^ ERROR recursive type `A` has infinite size

static B: A<()> = todo!();

fn main() {}
